--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/sn1p3r46/midServer/issues"
   },
-  "homepage": "https://github.com/sn1p3r46/midServer#readme"
+  "homepage": "https://github.com/sn1p3r46/midServer#readme",
+  "config": {
+    "port": 8081
+  }
 }
